  Moved classes around and renamed almost all of them.
  Re-added the texture for the Plasteel Shears.
  Many other changes not listed here (I don't remember them all).
  Amethyst and Copper Swords are now actually sword (they worked like axes before).
  Granite, Diorite and Andesite Hoes no longer deal 0 damage.

DIVERGENCE POINT TO 1.18

Build: 1.18-1.6.0:
  Updated to 1.18.

Features:
  New crystallized and gelatinous magma cream.
    Nether equivalent of the slime.

Build: 1.18.2-2.0.0:
  Updated to 1.18.2.
  Working on Variants again after some time (it's actually a lot).
  Since I haven't been adding things on this mod for a long time, it's now version 2.0.0 to reflect that things are going to change quite a bit.

Bug Fixes:
  Glow berry bushes now give glow berries instead of sweet berries (they were a placeholder item).

Features:
  Added stone tools for: deepslate, sandstone, red sandstone, tuff, calcite, basalt, blackstone, netherrack, magma block, obsidian, crying obsidian and bedrock

Build: 1.18.2-2.0.1 (13/05/2023):
  Finished adding the stone tools.

Bug Fixes:
  Fixed sandstone, red sandstone, calcite, netherrack and magma hoes having negative or zero damage.
  Fixed the model of potted crops, potted sugar cane, potted torches and potted sunny flowers.
  Added model and block state for potted grass.
  All pots mentioned above are now truly pot-able.
  Potted sugar cane and potted grass are now tinted according to the biome.
  Added inventory icon for warping vines.

Features:
  Added helmets, leggings and boots for phantom membrane, rabbit hide, wool and copper armor sets.
  Adding sweet berry vines (sweet berry cave vines).

Build: 1.18.2-2.0.2 (16/05/2023):
Features:
  Added oak, spruce, birch, jungle, acacia, dark oak, mangrove, bamboo (kinda), cherry, crimson, warped and ender wood tool sets.

16/06/2023:
  Changed this file for better readability.

Build: 1.18.2-2.0.3 (29 and 30/07/2023):
Blocks: