@@ -16,7 +16,7 @@ issueTrackerURL="https://github.com/Fabricio20106/Variants/issues" #optional
 # The modid of the mod
 modId="variants" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
-version="1.16.5-1.6.5" #mandatory
+version="1.16.5-1.6.6" #mandatory
  # A display name for the mod
 displayName="Variants" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification <here>
